WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244243
WebKit platform IPC::Connection::terminateSoon() uses code from UI process
https://bugs.webkit.org/show_bug.cgi?id=244243
Summary
WebKit platform IPC::Connection::terminateSoon() uses code from UI process
Kimmo Kinnunen
Reported
2022-08-23 02:43:08 PDT
WebKit platform IPC::Connection::terminateSoon() uses code from UI process Makes it harder to compile WebKit/Platform/IPC as a standalone, testable component
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-08-23 04:33:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3574
Radar WebKit Bug Importer
Comment 2
2022-08-23 04:33:29 PDT
<
rdar://problem/99027222
>
EWS
Comment 3
2022-08-24 01:00:40 PDT
Committed
253719@main
(4efdf99aa4b4): <
https://commits.webkit.org/253719@main
> Reviewed commits have been landed. Closing PR #3574 and removing active labels.
Kimmo Kinnunen
Comment 4
2022-08-24 09:11:20 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/3611
EWS
Comment 5
2022-08-24 09:23:44 PDT
Committed
253724@main
(a2d58df7b898): <
https://commits.webkit.org/253724@main
> Reviewed commits have been landed. Closing PR #3611 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug