WebKit platform IPC::Connection::terminateSoon() uses code from UI process https://bugs.webkit.org/show_bug.cgi?id=244243

Reviewed by Simon Fraser.

Move ConnectionTerminationWatchdog from IPC::Connection::terminateSoon() to
WebKit/UIProcess class XPCConnectionTerminationWatchdog. The class depends
on WebKit/UIProcess class ProcessAndUIAssertion. The feature is used only
in WebKit/UIProcess.

This is work towards being able to compile WebKit/Platform to a separate,
testable component for IPC testing purposes.

* Source/WebKit/Platform/IPC/Connection.h:
* Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm:
(IPC::ConnectionTerminationWatchdog::createConnectionTerminationWatchdog): Deleted.
(IPC::ConnectionTerminationWatchdog::ConnectionTerminationWatchdog): Deleted.
(IPC::ConnectionTerminationWatchdog::watchdogTimerFired): Deleted.
(IPC::Connection::terminateSoon): Deleted.
* Source/WebKit/PlatformMac.cmake:
* Source/WebKit/SourcesCocoa.txt:
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::shutDownProcess):
(WebKit::AuxiliaryProcessProxy::platformStartConnectionTerminationWatchdog):
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:
* Source/WebKit/UIProcess/Cocoa/AuxiliaryProcessProxyCocoa.mm:
(WebKit::AuxiliaryProcessProxy::platformStartConnectionTerminationWatchdog):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/253719@main